--- a/src/App.css
+++ b/src/App.css
@@ -1482,7 +1482,7 @@ table {
 }
 
 .firstBtn {
-  padding: 8px 40px;
+  padding: 11px 40px;
   font-weight: bold;
   font-size: 11px;
   border: none;
@@ -1492,6 +1492,10 @@ table {
 .AGAPadding {
   padding: 12px 0;
   font-size: 14px;
+}
+
+.aga {
+  margin-top: 2rem;
 }
 
 .dietPadding {
